--- a/config/production.yml
+++ b/config/production.yml
@@ -4,7 +4,7 @@ db:
   password: "KKK8mmQmEAfOBrxdAtBrDWrHS4tmXetJ"
   port: 5432
   database: "blog_db_bwzk"
-  synchronize: false
+  synchronize: true
 
 jwt:
   secret: "blog001"
